# armulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: thumb.md
include/arm/: arm_instructions.hpp  armulator.hpp  armulator_source.hpp  condition.hpp  exception.hpp  helper.hpp  memory.hpp  mode.hpp  psr.hpp  registers.hpp  stack.hpp  types.hpp  values.hpp
include/arm/thumb/: debug.hpp  instructions.hpp  opcodes.hpp  reg_op.hpp  tharmulator_source.hpp  values.hpp
include/emu/: helper.hpp  memory.hpp  stack.hpp
src/arm/: armulator.cpp  test.cpp
src/arm/thumb/: tharmulator.cpp
